static/css/base.css
html { height: 100%; }
body { background-color: #eee6e6; font-family: 'Saira Stencil One', cursive; word-wrap: break-word; }
html, body { max-width: 100%; overflow-x: hidden; }

/* Core Styling */
.gamerStyle { background-color: #4169e1; border-bottom: 10px solid #ffd700; border-top: 10px solid #ffd700; }

.form-supply-manage label,
.highlight { color: #ffd700; text-shadow: 2px 2px #141414; }
.altFont { font-family: 'Salsa', cursive; }

h1 { font-size: 1.5rem; }
h1, h2 { color: #ffd700; text-shadow: 2px 3px #141414; }
a { color: #ffd700; text-decoration: none; }
p { color: #eee6e6; margin-bottom: 0; }
.btn { color: #4169e1; background-color: #ffd700; text-shadow: none; border: 2px solid #eee6e6; }
.hidden { display: none; }

/* Additional Text */
.card-title, .text-price { font-size: 1.5rem; }
.link-sort { color: #eee6e6; font-size: 0.75rem; display: block; }
.crate-info { color: #eee6e6; }
.checkout-crate-header { font-size: .8rem; }

/* Additional Buttons */
.btn-crate { text-shadow: none; }
.btn-btt { cursor: pointer; }
.btn-img { position: relative; overflow: hidden; }
.btn-img input[type="file"] { cursor: pointer;  position: absolute; top: 0; right: 0; min-width: 100%; min-height: 100%; opacity: 0;}

/* Images */
.supply-img, .manage-img { border: 5px solid #ffd700; width: 100%; -o-object-fit:cover; object-fit:cover; -webkit-box-shadow: 2px 2px #141414; box-shadow: 2px 2px #141414; }
.img-btn-supplies { height: 12vh; }

/* Containers */
.container-content { margin-top: 16vh; }
.container-sort .navbar-toggler { padding: 0.5rem 1rem; -webkit-box-shadow: none; box-shadow: none; font-size: 1rem; }
.container-categories { border-top: 0; }
.container-search, .container-toasts { background-color: #4169e1;}
.container-buttons { position: fixed; bottom: 14vh; right: 10px; z-index: 999999999; width: 20%; }
.container-messages { position: fixed; z-index: 99999999999; bottom: 14vh; left: -4px; width: 100%; }

/* Nav */
.logo { height: 8vh; }
.text-menu, .text-bag { color: #ffd700; }
.navbar { background-color: #4169e1; -webkit-box-shadow: 0 5px 10px #141414; box-shadow: 0 5px 10px #141414; }
.navbar-nav { text-align: right; padding-right: 5vw; }
.navbar-toggler { padding: 0; font-size: 1rem; }
.navbar-toggler:focus { outline: none; -webkit-box-shadow: none; box-shadow: none; }
.navbar-toggler i, .nav-link, .text-bag { color: #ffd700; }
.navbar-brand { padding: 0; }
.nav-link:hover, .nav-link:active, .nav-link:focus, .btn:hover, .btn:active, .btn:focus { color: #141414; }

/* Footer */
.container-footer { background-color: #4169e1; -webkit-box-shadow: 0 -5px 10px #141414; box-shadow: 0 -5px 10px #141414; }
footer i, .text-footer { font-size: 1.6rem; }
.space { height: 15vh; }
.space-home { margin-top: 10rem; }

/* Toasts */
.header-toasts { color: #ffd700; background-color: #4169e1; }
.toast-body { font-size: 1.2rem; }
.toast-close { font-size: 1.5rem; cursor: pointer; }
.toast-checkout { float: right; }
.fa-thumbs-down { -webkit-transform: scaleX(-1); -ms-transform: scaleX(-1); transform: scaleX(-1); }
.crate-wrapper { height: 100px; overflow-x: hidden; overflow-y: auto; }

/* Supplies */
.title-sort:hover, .title-sort:focus { color: #ffd700; border: none; }
ul { padding: 0 1rem 0 0; list-style: none; text-align: right; }
.nav-link.active, .nav-link:hover, .nav-tabs .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover { border: none; width: -webkit-max-content; width: -moz-max-content; width: max-content; }
.nav-link.active, .nav-link:hover, .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover, .title-sort.active, .link-sort:hover { background-color: #ffd700; color: #4169e1; text-shadow: 2px 2px #eee6e6; border-bottom: 0; }
/* Credit for w3schools: Remove arrows/spinners on Chrome, Safari, Opera, Edge and Firefox */
input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
input[type=number] { -moz-appearance: textfield; }

/* Reviews */
.carousel { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; height: 30vh; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
/* Credit for w3schools: Hide scrollbar for Chrome, Safari, Opera, IE, Edge and Firefox */
.carousel-inner, .text-desc { overflow: scroll; -ms-overflow-style: none; scrollbar-width: none; }
.carousel-inner::-webkit-scrollbar, .text-desc::-webkit-scrollbar { display: none; }

/* Form inputs */
#id_review, #id_review:focus,
.form-input, .form-input:focus {
    -webkit-box-sizing: border-box;
            box-sizing: border-box; font-family: 'Salsa', cursive; color: #4169e1;
    padding: 10px 12px; margin-bottom: 10px; border-radius: 0px;
    background-color: #eee6e6; -webkit-box-shadow: 0 1px 3px 0 #141414; box-shadow: 0 1px 3px 0 #141414;
}

/* Form inputs sizes */
#id_review, #id_review:focus { height: 200px; }
.form-input, .form-input:focus { height: 40px; }

/* Form errors */
.invalid-feedback { width: 80%; margin: 1rem auto; }
.invalid-feedback strong { color: #eee6e6; font-weight: normal; word-wrap: break-word; }

/* Checkbox */
.info-check, .info-check:focus, .info-check:checked { border: 1px solid #ffd700; }
.info-check:checked { background-color: #4169e1; }

/* Allauth form formatting */
.allauth-form-inner-content p { margin: 1rem; font-family: 'Salsa', cursive; }
.allauth-form-inner-content .form-control { color: #4169e1; }
.allauth-form-inner-content input::-webkit-input-placeholder { color: #6c757d; font-family: 'Salsa', cursive; }
.allauth-form-inner-content input::-moz-placeholder { color: #6c757d; font-family: 'Salsa', cursive; }
.allauth-form-inner-content input:-ms-input-placeholder { color: #6c757d; font-family: 'Salsa', cursive; }
.allauth-form-inner-content input::-ms-input-placeholder { color: #6c757d; font-family: 'Salsa', cursive; }
.allauth-form-inner-content input::placeholder { color: #6c757d; font-family: 'Salsa', cursive; }
.allauth-form-inner-content label:not([for='id_remember']) { display: none; }
.allauth-form-inner-content form label, .allauth-form-inner-content a { color: #ffd700; text-shadow: 2px 2px #141414; }
.allauth-form-inner-content form .form-group #div_id_remember { width: -webkit-max-content; width: -moz-max-content; width: max-content; margin: auto; }
.allauth-form-inner-content input:not(#id_remember) { border-radius: 0; -webkit-box-shadow: 0 1px 3px 0 #141414; box-shadow: 0 1px 3px 0 #141414; width: 75%; margin: 0 auto 1rem auto; }

/* Allauth buttons and hover events */
.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover { color: #141414; }

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
    color: #4169e1; background-color: #ffd700; border: 2px solid #eee6e6; padding: .25rem .5rem;
	/* btn base properties from bootstrap */
	display: inline-block; font-weight: 400; font-size: 1rem; line-height: 1.5; border-radius: 0; text-align: center; 
    vertical-align: middle; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
    /* standard bootstrap btn transitions */
    -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
    -o-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
}

.header-links { font-size: 1.5rem; }

/* .card-buttons { position: absolute; bottom: 1%; } */

/* -------------------------------- Media Queries */
/* For medium screens */
@media screen and (min-width: 768px) and (min-height: 1024px) {
    .container-content { margin-top: 13vh; }
    .header-links { font-size: 1.75rem; }
    a.nav-link, .link-sort { font-size: 1.5rem; }
    .logo { height: 7vh; }
    .img-supply { width: 40%; }
    .text-order,  .checkout-crate-header  { font-size: 1rem; }
    .container-categories p { font-size: 1.5rem; }
    .container-messages { width: 50%; }
}
/* For large screens */
@media (min-width: 992px) {
    .nav-link { font-size: 2.5rem; }
    footer i.fab { display: inline; }
    h1 { font-size: 3rem;}
    a.nav-link, .link-sort { font-size: 1.5rem; }
    .container-content { margin-top: 13vh; }
    .text-order { font-size: 1rem; }
    .space { height: 10vh; }
    .tagline-home { font-size: 1.75rem; }
    .container-categories p { font-size: 1.5rem; }
    .container-messages { width: 25%; }
    .header-links { font-size: 1.5rem; }
}

